[package]
name = "two_phase_commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
clap = { version = "4.1.8", features = ["derive"] }
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.8.3"
tracing = "0.1.37"

[build-dependencies]
tonic-build = "0.8.4"
