[package]
name = "two_phase_commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
axum = "0.6.10"
axum-macros = "0.3.5"
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.26"
prost = "0.11.8"
rand = "0.8.5"
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-futures = "0.2.5"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.8.4"
